# openscad-env

./: Dockerfile  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml
openscad_env/: client.py  models.py
server/: Dockerfile  __init__.py  app.py  openscad_environment.py  rubrics.py  tasks.py  vision_judge.py
